--- a/view/upload.ejs
+++ b/view/upload.ejs
@@ -10,7 +10,7 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top">
             <div class="container">
-                <a href="" class="navbar-brand">File-App</a>
+                <a href="/" class="navbar-brand">File-App</a>
 
                 <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
                     <span class="navbar-toggler-icon"></span>
@@ -41,7 +41,8 @@
             <div class="col-md-6 offset-md-3 col-lg-6 offset-lg-3 col-sm-12">
                 <div class="acrd">
                     <div class="card-body">
-                        <form action="/api/file/upload" method="post" enctype="multipart/form-data">
+                        <!-- <form method="/api/file/upload" method="post" enctype="multipart/form-data"> -->
+                        <form id="fileForm" enctype="multipart/form-data">
                             <div class="form-group mt-2 mb-2">
                                 <div class="input-group">
                                     <input type="file" name="myfile" id="myfile" class="form-control" required>
@@ -56,7 +57,7 @@
     </section>
 
 
-
+    <script src="./js/file.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
