--- a/view/upload.ejs
+++ b/view/upload.ejs
@@ -45,7 +45,7 @@
                         <form id="fileForm" enctype="multipart/form-data">
                             <div class="form-group mt-2 mb-2">
                                 <div class="input-group">
-                                    <input type="file" name="myfile" id="myfile" class="form-control" required>
+                                    <input type="file" name="myfile" id="myfile" class="form-control" required><!-- // for uploding multipal files use multipal property-->
                                     <button type="submit" class="btn btn-success">Upload</button>
                                 </div>
                             </div>
